--- a/templates/fertilizer.html
+++ b/templates/fertilizer.html
@@ -3,7 +3,7 @@
 <style>
 
   html body {
-      background-image: url('static/images/a.jpg');
+      background-image: url('static/images/c.png');
       background-size: cover;
       background-repeat: no-repeat; 
   }
