--- a/templates/service.html
+++ b/templates/service.html
@@ -1,3 +1,4 @@
+User
 {% extends 'layout.html' %}
 
 {% block body %}
@@ -38,3 +39,4 @@
 </section>
 <!-- //Products & Services -->
 {% endblock %}
+
