--- a/templates/crop.html
+++ b/templates/crop.html
@@ -4,7 +4,7 @@
 <style>
 
     html body {
-        background-image: url('static/images/b.jpg');
+        background-image: url('static/images/c.jpg');
         background-size: cover;
         background-repeat: no-repeat; 
     }
