--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,12 +85,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
-					
 					<li class="nav-item">
-						<a class="nav-link" href="{{ url_for('about') }}">About us</a>
+						<a class="nav-link" href="{{ url_for('product') }}">Products</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('service') }}">Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('about') }}">About us</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
