--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,8 @@
 
 {% block body %}
 <!-- About Us Section -->
-<section class="about-us">
+
+<section class="about-us" style="background-color: rgb(228, 255, 201);">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -11,7 +12,7 @@
                 <p>At CropSense, we leverage state-of-the-art machine learning and deep learning algorithms to analyze various factors affecting crop growth, such as soil conditions, weather patterns, and pest threats. By providing accurate recommendations and insights, we enable farmers to make informed decisions and maximize their profitability.</p>
             </div>
             <div class="col-md-6">
-                <img src="{{ url_for('static', filename='images/farm_background.jpg') }}" class="img-fluid" alt="About Us Image">
+                <img src="{{ url_for('static', filename='images/about.jpeg') }}" class="img-fluid" alt="About Us Image">
             </div>
         </div>
     </div>
