--- a/templates/fertilizer.html
+++ b/templates/fertilizer.html
@@ -2,16 +2,18 @@
 
 <style>
 
-  html body {
-      background-image: url('static/images/c.png');
+  html , body {
+      background-image: url('static/images/fert.jpg');
       background-size: cover;
       background-repeat: no-repeat; 
   }
-
+  label {
+    color: white;
+}
 </style>
 <!--Form Section-->
 <br /><br />
-<h2 style="text-align: center; margin: 0px; color: black">
+<h2 style="text-align: center; margin: 0px; color: white">
   <b>Get informed advice on fertilizer based on soil</b>
 </h2>
 <br />
@@ -21,7 +23,7 @@
     width: 350px;
     height: 40rem;
     margin: 0px auto;
-    color: black;
+    color: white;
     border-radius: 25px;
     padding: 10px 10px;
   "
@@ -66,18 +68,7 @@
         required
       />
     </div>
-    <!-- <div class="form-group">
-      <label for="ph" style="font-size: 17px"><b>ph level</b></label>
-      <input
-        type="text"
-        class="form-control"
-        id="ph"
-        name="ph"
-        placeholder="Enter the value"
-        style="font-weight: bold"
-        required
-      />
-    </div> -->
+   
     <div class="form-group">
       <label for="crop" style="font-size: 17px; color: white;"
         ><b>Crop you want to grow</b></label
