--- a/templates/layout.html
+++ b/templates/layout.html
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{ url_for('product') }}">Products</a>
+						<a class="nav-link" href="{{ url_for('product') }}">Crops</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('service') }}">Services</a>
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul>
 					<li>
 						<p>
-							<span class="fa fa-map-marker mr-2"></span>Agriculture Business, 2nd Block, India
+							<span class="fa fa-map-marker mr-2"></span>Agriculture Business, 2nd Block, Farm land, India
 						</p>
 					</li>
 					<li class="mx-4">
@@ -132,7 +132,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li>
 						<p class="text-wh">
 							<span class="fa fa-envelope-open mr-2"></span>
-							<a href="mailto:info@example.com">noreply@agri.com</a>
+							<a href="mailto:info@example.com">CropSense@gmail.com</a>
 						</p>
 					</li>
 				</ul>
