--- a/templates/product.html
+++ b/templates/product.html
@@ -16,10 +16,13 @@
         .product-item img {
             max-width: 100%;
             height: auto;
+            width: 200px; /* Set a fixed width for all images */
+            height: 200px; /* Set a fixed height for all images */
+            object-fit: cover; /* Maintain aspect ratio */
         }
     </style>
     <div class="container py-md-5">
-        <h3 class="heading mb-sm-5 mb-4 text-center"> Our Products</h3>
+        <h3 class="heading mb-sm-5 mb-4 text-center"> Our Crops</h3>
         <div class="row product-thumbnails">
             {% for crop in crops %}
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
