--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
 					</div>
 					<div class="col-10 address-right">
 						<h5>Mail Us</h5>
-						<p><a href="mailto:info@example.com">Manager@gmail.com</a></p>
+						<p><a href="mailto:info@example.com">CropSense@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 					</div>
 					<div class="col-10 address-right">
 						<h5>Call Us</h5>
-						<p>+12(345) 6789 111</p>
+						<p>+123 456 7890</p>
 					</div>
 				</div>
 			</div>
@@ -57,8 +57,8 @@
 		<form action="#" method="post">
 			<div class="row">
 				<div class="col-md-6 contact-left">
-					<input type="text" name="Name" placeholder="Your Name" required="">
-					<input type="email" name="Email" placeholder="Email" required="">
+					<input type="text" name="Name" placeholder="Your Name" autocomplete="name" required="">
+					<input type="email" name="Email" placeholder="Email" autocomplete="email" required="">
 					<input type="text" name="Mobile Number" placeholder="Mobile Number" required="">
 				</div>
 				<div class="col-md-6 contact-right mt-md-0 mt-4">
@@ -69,9 +69,10 @@
 		</form>
 		<!-- map -->
 		<div class="map mt-5">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30766863.453808393!2d60.96397732208751!3d19.724514473909682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1712210563343!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30766863.45380839!2d60.963977322087494!3d19.72451447390969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1715013085149!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<!-- //map -->
+		
 	</div>
 </section>
 <!-- //contact -->
