--- a/templates/crop.html
+++ b/templates/crop.html
@@ -3,16 +3,18 @@
 
 <style>
 
-    html body {
+    html , body {
         background-image: url('static/images/c.jpg');
         background-size: cover;
         background-repeat: no-repeat; 
     }
-
+    label {
+      color: white;
+  }
 </style>
 <!--Form Section-->
 <br /><br />
-<h2 style="text-align: center; margin: 0px; color: black">
+<h2 style="text-align: center; margin: 0px; color: white">
   <b>Find out the most suitable crop to grow in your farm</b>
 </h2>
 <br />
@@ -94,18 +96,17 @@
       />
     </div>
     <div class="form-group">
-      <label for="State" style="font-size: 17px "><b>State</b></label>
+      <label for="sts" style="font-size: 17px "><b>State</b></label>
       <select
         onchange="print_city('state', this.selectedIndex);"
         id="sts"
         name="stt"
         class="form-control"
         style="font-weight: bold; color: black;"
-        
         required
       ></select>
       <br />
-      <label for="City" style="font-size: 17px"><b>City</b></label>
+      <label for="state" style="font-size: 17px"><b>City</b></label>
       <select
         id="state"
         class="form-control"
@@ -117,6 +118,7 @@
         print_state("sts");
       </script>
     </div>
+    
 
     <div class="d-flex justify-content-center">
       <button
