--- a/templates/fertilizer.html
+++ b/templates/fertilizer.html
@@ -14,7 +14,7 @@
 <!--Form Section-->
 <br /><br />
 <h2 style="text-align: center; margin: 0px; color: white">
-  <b>Get informed advice on fertilizer based on soil</b>
+  <b>Get informed advice on Fertilizer based on soil</b>
 </h2>
 <br />
 
@@ -36,7 +36,7 @@
         class="form-control"
         id="Nitrogen"
         name="nitrogen"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter N value"
         style="font-weight: bold"
         required
       />
@@ -50,7 +50,7 @@
         class="form-control"
         id="Phosphorous"
         name="phosphorous"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter P value"
         style="font-weight: bold"
         required
       />
@@ -63,7 +63,7 @@
         class="form-control"
         id="Pottasium"
         name="pottasium"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter K value"
         style="font-weight: bold"
         required
       />
